umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_isisdraw_lanthanides2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 15
bond_count: 0
sum_formula: CeDyErEuGdHoLaLuNdPmPrSmTbTmYb+42
graph6: N??????????????????
