umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_12-crown-4.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 28
sum_formula: C8H16O4
graph6: "[hCGGC@?G?o@_?_?G?A??C??O??O??O??A???_??A???G???C???C???@????O??"
