umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_fe-oxalato.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 21
sum_formula: C6FeO12
graph6: RGC?M@?g@?Q?C?a?@?CG?@?AA??C??
