umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_fopcao.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 28
sum_formula: C8H16S4
graph6: "[?`I@C_CG_O@A?A??_?G??_?A??A??A???_??G???_??A???A???A????_???G??"
