umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_gobtas.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 30
sum_formula: N6O18Th
graph6: "Xoa?CA??B_@o?[_?O?C??_?A??C????B???W??@_??A???C???C"
